boulder/tests/compile_fail/intrinsics/to_bytes/arg_more.bo
# 1 parameter but received 2
# (5:

fn test(a: u32) -> u8 {
    to_bytes(a, a).a
}